Fix card items not sized to 100% of available width on mobile, fix title size in galleries@

--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -7,6 +7,7 @@
   margin-left: auto;
   margin-bottom: $gutter;
   margin-top: $gutter;
+  width: 100%;
   // background-color: $gold-highlight;
   cursor: pointer;
 }
