--- a/components/Gallery/Gallery.scss
+++ b/components/Gallery/Gallery.scss
@@ -25,6 +25,10 @@
   margin-bottom: $gutter;
 }
 
+.gallery-title {
+  font-size: 40px;
+}
+
 .gallery-metadata-container {
   text-align: center;
 }
